# PyConPT2025RAGWorkshop

./: pyproject.toml
app/: main.py
app/agents/: cohereagent.py  fakeagent.py
app/controller/: controller.py
app/interfaces/: agent.py
app/interfaces/databases/: fakedatabase.py
